# RubicksCubeSolver

./: CMakeLists.txt  main.cpp
Model/: GenericRubiksCube.cpp  GenericRubiksCube.h  RubiksCube1d.cpp  RubiksCube3d.cpp  RubiksCubeBitboard.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
